--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,9 +20,8 @@
 	package="de.ub0r.android.travelLog" android:versionCode="1"
 	android:versionName="0.1">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:name="TravelLog">
-		<activity android:name="TravelLog" android:label="@string/app_name"
-			android:configChanges="orientation" android:windowSoftInputMode="adjustResize">
+		android:configChanges="orientation" android:windowSoftInputMode="adjustResize">
+		<activity android:name="TravelLog" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -37,4 +36,4 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-</manifest> 
+</manifest>
