--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,9 @@
 		<!-- The application's publisher ID assigned by AdMob -->
 		<meta-data android:name="ADMOB_PUBLISHER_ID" android:value="a14ae9c6fae6c50" />
 	</application>
-	<uses-sdk android:minSdkVersion="3" />
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
+	<supports-screen android:largeScreens="true" android:normalScreens="true"
+		android:smallScreens="true" android:anyDensity="true"/>
 	<!-- AdMob SDK permissions -->
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
