--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,8 @@
 	package="de.ub0r.android.travelLog" android:versionCode="30"
 	android:versionName="0.3">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:configChanges="orientation" android:windowSoftInputMode="adjustResize">
+		android:configChanges="orientation" android:windowSoftInputMode="adjustResize"
+		android:debuggable="true">
 		<activity android:name="TravelLog" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
