--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,16 +29,18 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="TravelLog$Preferences" />
-		<activity android:name="DonationHelper"
+		<activity android:name=".About" android:configChanges="orientation|keyboardHidden"
+			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
+		<activity android:name="de.ub0r.android.lib.DonationHelper"
 			android:configChanges="orientation|keyboardHidden"
-			android:windowSoftInputMode="adjustResize">
-		</activity>
+			android:windowSoftInputMode="adjustResize" />
 		<!-- The application's publisher ID assigned by AdMob -->
 		<meta-data android:name="ADMOB_PUBLISHER_ID" android:value="a14ae9c6fae6c50" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="7" />
-	<supports-screens android:largeScreens="true" android:normalScreens="true"
-		android:smallScreens="true" android:anyDensity="true"/>
+	<supports-screens android:largeScreens="true"
+		android:normalScreens="true" android:smallScreens="true"
+		android:anyDensity="true" />
 	<!-- AdMob SDK permissions -->
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
