--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
 	-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="de.ub0r.android.travelLog" android:versionCode="51"
-	android:versionName="0.5.1">
+	android:versionName="0.5.1" android:installLocation="auto">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:configChanges="orientation" android:windowSoftInputMode="adjustResize"
 		android:debuggable="true">
@@ -39,9 +39,7 @@
 		<meta-data android:value="true" android:name="ADMOB_ALLOW_LOCATION_FOR_ADS" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="7" />
-	<supports-screens android:largeScreens="true"
-		android:normalScreens="true" android:smallScreens="true"
-		android:anyDensity="true" />
+	<supports-screens android:anyDensity="true" />
 	<!-- AdMob SDK permissions -->
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
