--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,16 @@
 		<meta-data android:value="true" android:name="ADMOB_ALLOW_LOCATION_FOR_ADS" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="7" />
-	<supports-screens android:anyDensity="true" />
+		<supports-screens android:smallScreens="true"
+		android:normalScreens="true" android:largeScreens="true"
+		android:anyDensity="true" />
+	<uses-feature android:name="android.hardware.touchscreen"
+		android:required="false" />
+	<uses-feature android:name="android.hardware.location.network"
+		android:required="false" />
+	<uses-feature android:name="android.hardware.location"
+		android:required="false" />
+	
 	<!-- AdMob SDK permissions -->
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
