--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,8 +20,7 @@
 	package="de.ub0r.android.travelLog" android:versionCode="52"
 	android:versionName="0.5.2" android:installLocation="auto">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:configChanges="orientation" android:windowSoftInputMode="adjustResize"
-		android:debuggable="true">
+		android:configChanges="orientation" android:windowSoftInputMode="adjustResize">
 		<activity android:name="TravelLog" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -34,6 +33,9 @@
 		<activity android:name="de.ub0r.android.lib.DonationHelper"
 			android:configChanges="orientation|keyboardHidden"
 			android:windowSoftInputMode="adjustResize" />
+		<activity android:name="de.ub0r.android.lib.Changelog"
+			android:configChanges="orientation|keyboardHidden"
+			android:windowSoftInputMode="adjustResize" />
 		<receiver android:name="de.ub0r.android.lib.DonationReceiver">
 			<intent-filter>
 				<action android:name="de.ub0r.android.donator.REGISTERED" />
@@ -43,8 +45,8 @@
 		<meta-data android:name="ADMOB_PUBLISHER_ID" android:value="a14ae9c6fae6c50" />
 		<meta-data android:value="true" android:name="ADMOB_ALLOW_LOCATION_FOR_ADS" />
 	</application>
-	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="7" />
-		<supports-screens android:smallScreens="true"
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="8" />
+	<supports-screens android:smallScreens="true"
 		android:normalScreens="true" android:largeScreens="true"
 		android:anyDensity="true" />
 	<uses-feature android:name="android.hardware.touchscreen"
@@ -53,7 +55,7 @@
 		android:required="false" />
 	<uses-feature android:name="android.hardware.location"
 		android:required="false" />
-	
+
 	<!-- AdMob SDK permissions -->
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
