--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,12 @@
 			</intent-filter>
 		</receiver>
 		<!-- The application's publisher ID assigned by AdMob -->
+		<receiver android:name="com.admob.android.ads.analytics.InstallReceiver"
+			android:exported="true">
+			<intent-filter>
+				<action android:name="com.android.vending.INSTALL_REFERRER" />
+			</intent-filter>
+		</receiver>
 		<meta-data android:name="ADMOB_PUBLISHER_ID" android:value="a14ae9c6fae6c50" />
 		<meta-data android:value="true" android:name="ADMOB_ALLOW_LOCATION_FOR_ADS" />
 	</application>
