--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,19 +17,23 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="de.ub0r.android.travelLog" android:versionCode="54"
-	android:versionName="0.5.3" android:installLocation="auto">
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:configChanges="orientation" android:windowSoftInputMode="adjustResize">
-		<activity android:name="TravelLog" android:label="@string/app_name">
+	package="de.ub0r.android.travelLog" android:versionCode="180"
+	android:versionName="1.8.0" android:installLocation="auto">
+	<application name=".TravelLog" android:icon="@drawable/icon"
+		android:label="@string/app_name" android:configChanges="orientation"
+		android:windowSoftInputMode="adjustResize"
+		android:hardwareAccelerated="true">
+		<activity android:name=".ui.Logs" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="TravelLog$Preferences" />
-		<activity android:name=".About" android:configChanges="orientation|keyboardHidden"
+		<activity android:name=".ui.Preferences" />
+		<activity android:name=".ui.About" android:configChanges="orientation|keyboardHidden"
 			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
+		<provider android:name=".data.DataProvider"
+			android:authorities="de.ub0r.android.travelLog.provider" />
 		<activity android:name="de.ub0r.android.lib.DonationHelper"
 			android:configChanges="orientation|keyboardHidden"
 			android:windowSoftInputMode="adjustResize" />
@@ -45,7 +49,7 @@
 			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 			android:configChanges="keyboard|keyboardHidden|orientation" />
 	</application>
-	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10" />
+	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="10" />
 	<supports-screens android:smallScreens="true"
 		android:normalScreens="true" android:largeScreens="true"
 		android:anyDensity="true" />
@@ -60,4 +64,5 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
