--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,8 @@
 		not, see <http://www.gnu.org/licenses/>.
 	-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="de.ub0r.android.travelLog" android:versionCode="180"
-	android:versionName="1.8.0" android:installLocation="auto">
+	package="de.ub0r.android.travelLog" android:versionCode="181"
+	android:versionName="2.0beta1" android:installLocation="auto">
 	<application name=".TravelLog" android:icon="@drawable/icon"
 		android:label="@string/app_name" android:configChanges="orientation"
 		android:windowSoftInputMode="adjustResize"
