--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,10 @@
 	package="de.ub0r.android.travelLog" android:versionCode="181"
 	android:versionName="2.0beta1" android:installLocation="auto">
 	<application name=".TravelLog" android:icon="@drawable/icon"
-		android:label="@string/app_name" android:configChanges="orientation"
-		android:windowSoftInputMode="adjustResize"
-		android:hardwareAccelerated="true">
-		<activity android:name=".ui.Logs" android:label="@string/app_name">
+		android:label="@string/app_name" android:hardwareAccelerated="true">
+		<activity android:name=".ui.Logs" android:label="@string/app_name"
+			android:configChanges="orientation|keyboardHidden"
+			android:windowSoftInputMode="adjustResize">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -32,6 +32,13 @@
 		<activity android:name=".ui.Preferences" />
 		<activity android:name=".ui.LogTypes" android:configChanges="orientation|keyboardHidden"
 			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
+		<activity android:name=".ui.Map" android:configChanges="orientation|keyboardHidden"
+			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 		<activity android:name=".ui.About" android:configChanges="orientation|keyboardHidden"
 			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
 		<provider android:name=".data.DataProvider"
@@ -50,6 +57,7 @@
 		<activity android:name="com.google.ads.AdActivity"
 			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 			android:configChanges="keyboard|keyboardHidden|orientation" />
+		<uses-library android:name="com.google.android.maps" />
 	</application>
 	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="10" />
 	<supports-screens android:smallScreens="true"
