--- a/default.properties
+++ b/default.properties
@@ -11,5 +11,5 @@
 split.density=false
 android.library.reference.1=../ub0rlib/
 # Project target.
-target=android-11
+target=Google Inc.:Google APIs:11
 apk-configurations=
