--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,12 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ui.Preferences" />
+		<activity android:name=".ui.Preferences"
+			android:configChanges="orientation|keyboardHidden"
+			android:windowSoftInputMode="adjustResize" />
+		<activity android:name=".ui.PreferencesGoHome"
+			android:configChanges="orientation|keyboardHidden"
+			android:windowSoftInputMode="adjustResize" />
 		<activity android:name=".ui.LogTypes" android:configChanges="orientation|keyboardHidden"
 			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
 		<activity android:name=".ui.Map" android:configChanges="orientation|keyboardHidden"
@@ -56,7 +61,7 @@
 			android:configChanges="keyboard|keyboardHidden|orientation" />
 		<uses-library android:name="com.google.android.maps" />
 	</application>
-	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="10" />
+	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="12" />
 	<supports-screens android:smallScreens="true"
 		android:normalScreens="true" android:largeScreens="true"
 		android:anyDensity="true" />
@@ -66,7 +71,7 @@
 		android:required="false" />
 	<uses-feature android:name="android.hardware.location"
 		android:required="false" />
-		
+
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
