migrate to ActionBarSherlock

--- a/default.properties
+++ b/default.properties
@@ -11,5 +11,6 @@
 split.density=false
 android.library.reference.1=../ub0rlib/
 # Project target.
-target=Google Inc.:Google APIs:12
+target=Google Inc.:Google APIs:13
 apk-configurations=
+android.library.reference.2=../ActionBarSherlock/library
