--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
 		android:hardwareAccelerated="true">
 		<activity android:name=".ui.Logs" android:label="@string/app_name"
 			android:configChanges="orientation|keyboardHidden"
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize" android:theme="@style/Theme.SherlockUb0r">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -40,12 +40,13 @@
 		<activity android:name=".ui.Map" android:configChanges="orientation|keyboardHidden"
 			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
 		<activity android:name=".ui.About" android:configChanges="orientation|keyboardHidden"
-			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize" />
+			android:launchMode="singleTop" android:windowSoftInputMode="adjustResize"
+			android:theme="@style/Theme.SherlockUb0r" />
 		<provider android:name=".data.DataProvider"
 			android:authorities="de.ub0r.android.travelLog.provider" />
 		<activity android:name="de.ub0r.android.lib.DonationHelper"
 			android:configChanges="orientation|keyboardHidden"
-			android:windowSoftInputMode="adjustResize" />
+			android:windowSoftInputMode="adjustResize" android:theme="@android:style/Theme.Light" />
 		<receiver android:name=".data.LocationChecker">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
