--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@ split.density=false
 android.library.reference.1=../ub0rlib/
 android.library.reference.2=../ActionBarSherlock/library
 # Project target.
-target=android-13
+target=Google Inc.:Google APIs:13
 apk-configurations=
