--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.ub0r.android.travelLog"
     android:installLocation="auto"
-    android:versionCode="192"
-    android:versionName="2.3" >
+    android:versionCode="7250002"
+    android:versionName="2.5" >
 
     <application
         android:hardwareAccelerated="true"
@@ -75,6 +75,7 @@
         <activity
             android:name="de.ub0r.android.lib.ChangelogFragmentActivity"
             android:configChanges="orientation|keyboardHidden"
+            android:theme="@style/Theme.Sherlock.Light.DarkActionBar"
             android:windowSoftInputMode="adjustResize" />
 
         <uses-library android:name="com.google.android.maps" />
