--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,31 @@
     android:versionCode="7250002"
     android:versionName="2.5" >
 
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="15" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.network"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
@@ -61,7 +86,8 @@
 
         <provider
             android:name=".data.DataProvider"
-            android:authorities="de.ub0r.android.travelLog.provider" />
+            android:authorities="de.ub0r.android.travelLog.provider"
+            android:exported="false" />
 
         <receiver android:name=".data.LocationChecker" >
             <intent-filter>
@@ -72,38 +98,7 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name="de.ub0r.android.lib.ChangelogFragmentActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:theme="@style/Theme.Sherlock.Light.DarkActionBar"
-            android:windowSoftInputMode="adjustResize" />
-
         <uses-library android:name="com.google.android.maps" />
     </application>
-
-    <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
-
-    <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true" />
-
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
-    <uses-feature
-        android:name="android.hardware.location.network"
-        android:required="false" />
-    <uses-feature
-        android:name="android.hardware.location"
-        android:required="false" />
-
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
