--- a/TravelLog/src/main/AndroidManifest.xml
+++ b/TravelLog/src/main/AndroidManifest.xml
@@ -50,10 +50,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
+            android:allowBackup="true"
             android:hardwareAccelerated="true"
             android:icon="@drawable/icon"
             android:label="@string/app_name">
